fix menuButton alignment

--- a/frontend/src/components/Navigation/navigation.scss
+++ b/frontend/src/components/Navigation/navigation.scss
@@ -98,6 +98,7 @@ $hoverHighlight: rgb(58, 56, 56);
 
 .menuButton {
   all: unset;
+  display: block;
 }
 
 .burger {
